hphp/hack/test/typecheck/new_inference/nothing/union.php.legacy.exp
File "union.php", line 6, characters 25-31:
Unbound name: nothing (an object type) (Naming[2049])
File "union.php", line 12, characters 14-15:
Invalid argument (Typing[4110])
File "union.php", line 4, characters 21-23:
This is an int
File "union.php", line 6, characters 25-31:
It is incompatible with an object of type nothing
File "union.php", line 17, characters 16-22:
Unbound name: nothing (an object type) (Naming[2049])
File "union.php", line 19, characters 24-25:
Invalid argument (Typing[4110])
File "union.php", line 15, characters 38-40:
This is an int
File "union.php", line 15, characters 38-40:
Considering that this type argument is invariant with respect to Vector
File "union.php", line 17, characters 16-22:
It is incompatible with an object of type nothing
